# shorturl

./: .env.example  README.md  docker-compose.yml  pyproject.toml
docker/python/: Dockerfile
src/core/: exceptions.py  models.py  schemas.py  services.py
src/core/interfaces/: processors.py  repositories.py
src/infrastructure/: celery.py  processors.py  tasks.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 74e324257411_.py
src/infrastructure/database/tables/: __init__.py  url.py
src/infrastructure/repositories/: url.py
src/settings/: __init__.py  application.py  celery.py
src/web/: application.py
src/web/api/v1/: annotations.py  dependencies.py  router.py
src/web/api/v1/routes/: url.py
src/web/api/v1/schemas/: url.py
tests/: conftest.py  fakes.py
tests/integration/web/api/v1/routes/: test_url.py
tests/unit/core/services/: test_url.py
